Fixed vertical alignment of clone option buttons

--- a/style.scss
+++ b/style.scss
@@ -105,7 +105,9 @@
                         float: left;
                         font-size: 10px;
                         font-weight: bold;
-                        padding: 2px 10px;
+                        height: 25px;
+                        line-height: 25px;
+                        padding: 0 10px;
 
                         &:first-child {
                             @include side-radius(top, left, 5px);
@@ -122,7 +124,7 @@
 
                     input {
                         border: none;
-                        height: 23px;
+                        height: 25px;
                         padding: 0 5px;
                         width: 225px;
                     }
